edit text p, modified close btn

--- a/index.html
+++ b/index.html
@@ -268,10 +268,9 @@
                                 <i class="fas fa-times modal-close-btn"></i>
                                 <h3>NodeJS</h3>
                                 <h4>Runtime to run javascript outsite website</h4>
-                                <p>NodeJS is good runtime to run javascript outside the browser. NodeJs integrated with
-                                    npmjs is good option to make better application. Im using NodeJs as a runtime and
-                                    integrated with express js to configure route page. For Database NodeJs can use many
-                                    option of database Sql or NoSql, but i prefer using NoSql and that is MongoDb</p>
+                                <p>NodeJS is good runtime to run javascript outside the browser Im using NodeJs as a
+                                    runtime and express js to configure route page. For Database I'm using NoSql and
+                                    that is MongoDb</p>
                                 <h4>What I learned about NodeJS</h4>
                                 <ul>
                                     <li><i class="fas fa-check-circle"></i> How to install NPM package and using it</li>
@@ -297,10 +296,8 @@
                                 <i class="fas fa-times modal-close-btn"></i>
                                 <h3>Python Programming</h3>
                                 <h4>Im using it for AI</h4>
-                                <p>Python is simple language that doesn't need semicolon like other language and python
-                                    have simplified syntax. The other reason why im using python is because python is
-                                    easy to learn for newbie and python have a lot of libraries for data science.
-                                    Libraries for datascience like Pandas, StatsModels, NumPy, SciPy, and Scikit-Learn
+                                <p>Python have simplified syntax. The other reason why im using python is because python
+                                    is easy to learn for newbie and python have a lot of libraries for data science.
                                 </p>
                                 <h4>What I learned about python</h4>
                                 <ul>
@@ -327,17 +324,16 @@
                         <div class="service-modal flex-center">
                             <div class="service-modal-body">
                                 <i class="fas fa-times modal-close-btn"></i>
-                                <h3>Javascript Programming</h3>
+                                <h3>Javascript</h3>
                                 <h4>Im using it for making website</h4>
-                                <p>Javascirpt as programming language is easy to learn but hard to master. Because
-                                    technology about javascript never ended. I love javascript because to learn
-                                    javascript we doesn't need to install anything. We just need app browser. Someone
-                                    said "In Javascirpt object, are king. if you understand object, you understand
+                                <p>Javascirpt as programming language is easy to learn but hard to master. I love
+                                    javascript because to learn javascript we just need app browser."In Javascirpt
+                                    object, are king. if you understand object, you understand
                                     javascript" <p>
                                         <h4>What I learned about Javascript</h4>
                                         <ul>
-                                            <li><i class="fas fa-check-circle"></i> Fundamental Javascirpt, concept
-                                                object and OOP in javascript.</li>
+                                            <li><i class="fas fa-check-circle"></i> Fundamental Javascirpt and OOP in
+                                                javascript.</li>
                                             <li><i class="fas fa-check-circle"></i> integrated with API in javascript
                                             </li>
                                             <li><i class="fas fa-check-circle"></i> Callback, promise, Async Await and
@@ -427,7 +423,7 @@
                         <div class="portfolio-model flex-center">
                             <div class="portfolio-model-body">
                                 <i class="fas fa-times portfolio-close-btn"></i>
-                                <h3>UI/UX Design</h3>
+                                <h3>Contact App</h3>
                                 <img src="img/portfolio/contactapp.gif" alt="">
                                 <p>Web based application for contact managament with feature add contact, delete
                                     contact, validation data contact, show list contact and edit data contact. This app
@@ -545,7 +541,8 @@
                             <h2>Next Project</h2>
                         </div>
                         <div class="contact-btn">
-                            <a href="" class="btn">Get In Touch <i class="fas fa-paper-plane"></i></a>
+                            <a href="https://t.me/alpinsil" class="btn">Get In Touch <i
+                                    class="fas fa-paper-plane"></i></a>
                         </div>
                     </div>
 
