--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class="nav-close-btn"></div>
                     <a class="active" href="#home">Home</a>
                     <a href="#about">About</a>
-                    <a href="#skills">Skills</a>
+                    <a href="#history">History</a>
                     <a href="#knowledge">Knowledge</a>
                     <a href="#portfolio">Portfolio</a>
                     <a href="#contact">Contact</a>
@@ -54,7 +54,7 @@
             </div>
             <div class="info">
                 <h2>Hi, I am Alvin</h2>
-                <h3>Front-end Developer</h3>
+                <h3>Wants to be Web Developer</h3>
                 <p>I learn about how to make website and it's fun. Feel free to give me suggestion</p>
                 <a href="https://t.me/alpinsil" target="_blank" class="btn">Contact Me <i
                         class="fas fa-arrow-circle-right"></i></a>
@@ -107,10 +107,10 @@
     </section>
 
     <!-- Skills Section -->
-    <section class="skills section" id="skills">
+    <section class="skills section" id="history">
         <div class="container flex-center">
-            <h1 class="section-title-01">Skills</h1>
-            <h2 class="section-title-02">Skills</h2>
+            <h1 class="section-title-01">History</h1>
+            <h2 class="section-title-02">History</h2>
             <div class="content">
                 <div class="skills-description">
                     <h3>Education & Interest</h3>
